2004-11-17  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/Interp.java (setWorkingDir):
	Fixup error message from cd command so that
	it matches the Tcl implementation.
	[Bug 896209]

2004-11-17  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/ExecCmd.java (cmdProc)
	Update exec for JDK 1.3 or newer so that
	another thread is created to read data
	from the subprocess while the first thread
	calls waitFor(). Earlier than JDK 1.3
	still does both in one thread.
	[Bug 879167]

2004-11-17  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/ExecCmd.java (execWin):
	Add "windows xp" as one of the OS strings
	checked before execing the pre JDK 1.3
	version of exec.
	[Bug 879167]

2004-10-01  Mo DeJong  <mdejong@users.sourceforge.net>

	* Makefile.in: Copy tests/tl.jar to build dir
	and add it to the CLASSPATH.
	* src/jacl/tcl/lang/Interp.java (convertStringCRLF,
	readScriptFromURL): Move CRLF conversion code into
	helper function so that it can be regression tested.
	* src/tclblend/tcl/lang/Interp.java (evalResource,
	readScriptFromInputStream): Remove JDK compressed jar
	hack and replace with Reader/Writer code in the
	readScriptFromInputStream helper.
	* tests/tl.jar: Add jar for test cases.
	* tests/jacl/Interp.test: Add test case for
	evalResource() in the Interp class.
	* tests/tclblend/javaInterp.test: Add test case
	for evalResource() in the Interp class.

2004-09-30  Mo DeJong  <mdejong@users.sourceforge.net>

	* configure: Regen.
	* tcljava.m4 (TCLJAVA_ENABLE_JACL_OR_TCLBLEND):
	When building with Jacl only, set the ac_cv_tcl_win32
	var based on the results of uname -s. This fixes
	a native path conversion code problem that was
	causing a configure problem and was causing
	`make test` to fail.
	[Bug 904653]

2004-09-30  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/FileChannel.java (close): Set file
	member to null after closing.
	* src/jacl/tcl/lang/Interp.java (readScriptFromFile,